# penrose-config

./: Cargo.nix  Cargo.toml  flake.nix
src/: bar.rs  lib.rs  main.rs
