[package]
name = "penrose-config"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
penrose = "0.3.3"
penrose_ui = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bin]]
name = "penrose-config"
path = "src/main.rs"
